--- a/docs/prm/pyscript.toml
+++ b/docs/prm/pyscript.toml
@@ -7,3 +7,7 @@ from = "https://raw.githubusercontent.com/pbizopoulos/naming-convention/main/pyt
 
 [[fetch]]
 from = "https://raw.githubusercontent.com/pbizopoulos/naming-convention/main/python/prm/test_function.py"
+
+[[fetch]]
+from = "https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/packages/tokenizers/punkt.zip"
+
