--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,16 @@ updates:
     directory: '/python/'
     schedule:
       interval: 'monthly'
+  - package-ecosystem: 'docker'
+    directory: '/docs/'
+    schedule:
+      interval: 'monthly'
   - package-ecosystem: 'github-actions'
     directory: '/'
+    schedule:
+      interval: 'monthly'
+  - package-ecosystem: 'npm'
+    directory: '/docs/'
     schedule:
       interval: 'monthly'
   - package-ecosystem: 'pip'
